[metadata]
name = dms2122auth
version = attr: dms2122auth.VERSION
description = DMS 2021-2022 authentication service
long_description = file: README.md
keywords = dms, ubu, auth, authentication, service
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/dms2122auth
    bin/dms2122auth-create-admin
install_requires = sqlalchemy; flask<2.0; pyyaml<6.0; connexion[swagger-ui]; dms2122common
