[metadata]
name = dms2122common
version = attr: dms2122common.VERSION
description = DMS 2021-2022 core functionalities library
long_description = file: README.md
keywords = dms, ubu, core, library
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires = appdirs; pyyaml
