[metadata]
name = dms2122frontend
version = attr: dms2122frontend.VERSION
description = DMS 2021-2022 frontend service
long_description = file: README.md
keywords = dms, ubu, frontend, service
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/dms2122frontend
install_requires = dms2122common; flask; requests
